# codeassay

./: .gitignore  CONTRIBUTING_RULES.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
docs/superpowers/plans/: 2026-04-18-configurable-ai-detection.md  2026-04-19-v0.3-turnover-and-fingerprinting.md
docs/superpowers/specs/: 2026-04-18-configurable-ai-detection-design.md  2026-04-18-v0.3-turnover-and-fingerprinting-design.md
skills/: codeassay.md
src/codeassay/: __init__.py  __main__.py  _chartjs.py  benchmarks.json  classifier.py  cli.py  dashboard.py  db.py  ignore.py  metrics.py  reporting.py  rework.py  scanner.py  tag.py  turnover.py
src/codeassay/detection/: __init__.py  config.py  config_init.py  fingerprint.py  profiles.py  rules.py  scorer.py
src/codeassay/profiles/: __init__.py  aider.toml  amp.toml  claude_code.toml  cline.toml  codebuddy.toml  codex_cli.toml  continue_dev.toml  copilot.toml  cursor.toml  devin.toml  gemini.toml  gpt.toml  opencode.toml  replit_ai.toml  v0_dev.toml  windsurf.toml
tests/: conftest.py  test_benchmarks.py  test_classifier.py  test_cli.py  test_cli_config.py  test_cli_detect_test.py  test_cli_fail_on.py  test_cli_new_flags.py  test_db.py  test_ignore.py  test_metrics.py  test_reporting.py  test_rework.py  test_scan_integration.py  test_scanner.py  test_scanner_fingerprint.py  test_tag.py  test_turnover.py  test_v0_3_integration.py
tests/detection/: test_builtin_profiles.py  test_classify.py  test_config.py  test_detection_types.py  test_fingerprint.py  test_profiles_loader.py  test_rules.py  test_scorer_aggregate.py  test_scorer_signals.py
