[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "codeassay"
version = "0.1.0"
description = "Git forensics tool for analyzing AI-authored code quality"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Jeff Sinason", email = "jeffsinason@echoforgex.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
codeassay = "codeassay.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
