[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codeassay"
version = "0.1.1"
description = "Git forensics tool for analyzing AI-authored code quality"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    {name = "Jeff Sinason", email = "jeffsinason@echoforgex.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
codeassay = "codeassay.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
